<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:focusable="auto"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageViewAdd"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/imageAddButton"
            app:srcCompat="@drawable/icon3"
            android:scaleType="fitCenter"/>

        <ProgressBar
            android:id="@+id/progressRound"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/save"
            android:textAlignment="center"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_marginBottom="10dp"
            app:cornerRadius="0dp"
            app:strokeColor="@color/Orange"
            android:backgroundTint="@color/Mocassin"
            />

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            app:cardCornerRadius="8dp"
            android:padding="10dp"
            app:cardUseCompatPadding="true">
            <EditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:autofillHints="FoodName"
                android:clickable="false"
                android:padding="8dp"
                android:hint="@string/enter_title"
                android:inputType="textMultiLine"
                android:background="@null"/>
        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/textIngre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/ingredients_required" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            app:cardCornerRadius="8dp"
            android:padding="10dp"
            app:cardUseCompatPadding="true">
            <EditText
                android:id="@+id/ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:autofillHints="ingredients"
                android:padding="8dp"
                android:hint="@string/enter_the_ingredients"
                android:inputType="textMultiLine"
                android:background="@null"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textSteps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/instructions" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            app:cardCornerRadius="8dp"
            android:padding="10dp"
            app:cardUseCompatPadding="true">
            <EditText
                android:id="@+id/steps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Instructions to cook"
                android:layout_margin="5dp"
                android:padding="8dp"
                android:hint="@string/enter_the_instructions"
                android:inputType="textMultiLine"
                android:background="@null"/>
        </androidx.cardview.widget.CardView>


    </LinearLayout>
</ScrollView>