<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:elevation="13dp"
        app:cardCornerRadius="6dp"
        app:cardUseCompatPadding="true"
        android:id="@+id/editButton"
        android:padding="1dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_single_view"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:contentDescription="@string/image"
                android:foregroundGravity="left"
                android:padding="3dp"
                android:scaleType="fitCenter"
                android:maxHeight="112dp"
                android:maxWidth="112dp"
                android:src="@drawable/food1"
                android:adjustViewBounds="true"
                android:layout_gravity="start" />


            <TextView
                android:id="@+id/textView_single_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/food_title"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:src="@drawable/ic_baseline_delete_24"
            android:background="@null"
            android:layout_margin="8dp"
            android:contentDescription="@string/del" />

    </androidx.cardview.widget.CardView>

</RelativeLayout>